--- a/CSS/_header.css
+++ b/CSS/_header.css
@@ -22,5 +22,9 @@ header > p{
     max-width: 650px;
     width: 100%;
     
+}
+
+@media screen and (max-width:800px) {
+    /* serve pra auxiliar na resposividade de acordo com que quero*/
     
 }
