--- a/CSS/_nav.css
+++ b/CSS/_nav.css
@@ -8,7 +8,7 @@ nav{
     position: absolute;
     left: 50%;
     transform: translateX(-50%);
-    
+    background: #999;
 
     
 }
@@ -35,12 +35,11 @@ h1 {
    
     }
 
-    nav ul {
-     display: grid;
+    ul {
+     display: flex;
      list-style: none; /*para deixar sem os pontinhos marcados*/
-     width: 100%;
+     height: 50px;
      align-items: center;
-     grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
     }
     
     a{
