--- a/CSS/_nav.css
+++ b/CSS/_nav.css
@@ -8,7 +8,7 @@ nav{
     position: absolute;
     left: 50%;
     transform: translateX(-50%);
-    background: #999;
+    
 
     
 }
@@ -35,11 +35,12 @@ h1 {
    
     }
 
-    ul {
-     display: flex;
+    nav ul {
+     display: grid;
      list-style: none; /*para deixar sem os pontinhos marcados*/
-     height: 50px;
+     width: 100%;
      align-items: center;
+     grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
     }
     
     a{
