--- a/CSS/_base.css
+++ b/CSS/_base.css
@@ -14,11 +14,12 @@
         font-size: 62.5%;
       }
 
-      /* .container {
+      .container {
         max-width: 1150px;
         width: 100%;
         margin: 0 auto;
+        padding: 0 2rem;
 
-      } */
+      } 
       
      
