--- a/CSS/_header.css
+++ b/CSS/_header.css
@@ -1,18 +1,22 @@
 header {
     background: url("../images/header.jpeg"), lightgray 50% / cover no-repeat;
+    background-position: center;
     width: 100%;
-    height: 600px;
+    height: 100%;
+    min-height: 600px;
     /* margin-top: -90px ; */
     display: flex;
     flex-direction: column;
     align-items: end;
+    justify-content: center;
 }
 
 
 header > h2{
     color:var(--color-secundary);
-    font-size: 110px;
+    font-size: 12rem;
     font-weight: 900;
+    
 }
 
 header > p{
@@ -25,6 +29,8 @@ header > p{
 }
 
 @media screen and (max-width:800px) {
+    header h2{
+        font-size: 8rem;
+    }
     /* serve pra auxiliar na resposividade de acordo com que quero*/
-    
 }
