--- a/CSS/_nav.css
+++ b/CSS/_nav.css
@@ -1,62 +1,170 @@
-/*@import "./css/_base.css" pra realizar a importação da base do css que criei*/
-nav{
-    max-width: 1150px ;
-    width: 100%;
-    margin: 20px auto;
+.nav {
+  display: flex;
+  justify-content: space-between;
+  max-width: 115rem;
+  width: 100%;
+  padding: 2rem;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 1;
+}
+
+.nav a {
+  text-decoration: none;
+}
+
+.logo {
+  color: var(--text-primary);
+  font-size: 4rem;
+  font-weight: 900;
+  text-transform: uppercase;
+  text-align: right;
+}
+
+.accent {
+  color: var(--color-primary);
+}
+
+.subtitle {
+  display: block;
+  margin-top: -0.5rem;
+  color: var(--text-primary);
+  font-size: 0.4em;
+  font-weight: 500;
+}
+
+.menu {
+  width: 100%;
+  max-width: 70rem;
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+.menu a {
+  color: var(--text-primary);
+  font-size: 1.5rem;
+  font-weight: 500;
+  text-transform: uppercase;
+  transition: color 0.5s linear;
+}
+
+.menu a:hover {
+  color: var(--color-secondary);
+}
+
+.nav .active {
+  color: var(--color-primary);
+}
+
+#menu-toggle {
+  display: none;
+}
+
+.menu-button-container {
+  display: none;
+  height: 100%;
+  width: 3rem;
+  cursor: pointer;
+  position: relative;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.menu-button,
+.menu-button::before,
+.menu-button::after {
+  display: block;
+  background-color: var(--text-primary);
+  position: absolute;
+  height: 0.4rem;
+  width: 3rem;
+  transition: transform 500ms cubic-bezier(0.23, 1, 0.32, 1);
+  border-radius: 0.2rem;
+}
+
+.menu-button::before {
+  content: "";
+  margin-top: -0.8rem;
+}
+
+.menu-button::after {
+  content: "";
+  margin-top: 0.8rem;
+}
+
+#menu-toggle:checked + .menu-button-container .menu-button::before {
+  margin-top: 0rem;
+  transform: rotate(405deg);
+}
+
+#menu-toggle:checked + .menu-button-container .menu-button {
+  background: rgba(255, 255, 255, 0);
+}
+
+#menu-toggle:checked + .menu-button-container .menu-button::after {
+  margin-top: 0rem;
+  transform: rotate(-405deg);
+}
+
+@media screen and (max-width: 800px) {
+  .logo {
+    font-size: 3.5rem;
+  }
+
+  .menu-button-container {
     display: flex;
-    justify-content: space-between;
+  }
+
+  .menu {
     position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
-    
+    top: 8rem;
+    left: 0;
+    height: 100vh;
+    max-width: 100%;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
 
-    
-}
-h1 {
-    color:var(--text-primary);
-    font-size: 35px;
-    height: 50px;
+  #menu-toggle:checked ~ .menu {
+    display: flex;
+    background-color: var(--bg-footer);
+  }
+
+  #menu-toggle ~ .menu {
+    display: none;
+  }
+
+  #menu-toggle ~ .menu li {
+    height: 0;
+    margin: 0;
+    padding: 0;
+    border: 0;
+    transform: height 400ms cubic-bezier(0.23, 1, 0.32, 1);
+  }
+
+  #menu-toggle:checked ~ .menu li {
+    padding: 5em 0.5em;
+    transform: height 400ms cubic-bezier(0.23, 1, 0.32, 1);
+  }
+
+  #menu-toggle:checked ~ .menu a {
+    font-size: 2rem;
     font-weight: 900;
-    letter-spacing: -0.8px;
-    text-transform: uppercase;
-  
+  }
+
+  /* #menu-toggle:checked ~ .menu li:not(:first-child) {
+    border-top: 3px solid #fff;
+  } */
 }
-.accent{
-    color:var(--color-primary);
+
+@media screen and (max-width: 4600px) {
+  .logo {
+    font-size: 3rem;
+  }
 }
-.subtitle{
-    display: block;
-    margin-top: -10px;
-    color:var(--text-primary);
-    font-size: 15px;
-    font-weight: 500;
-    text-transform: uppercase;
-    text-align: end;
-   
-    }
-
-    nav ul {
-     display: grid;
-     list-style: none; /*para deixar sem os pontinhos marcados*/
-     width: 100%;
-     align-items: center;
-     grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
-    }
-    
-    a{
-        text-decoration: none; /*para remover os sublinhados*/
-        color:var(--text-primary);
-        font-size: 15px;
-        font-weight: 500;
-        margin-left: 30px;
-        text-transform: uppercase;
-        transition: color 1s linear; /*transition nesse caso pra realizar a mudança de cor para 2 segundos*/
-
-    }
-
-    a:hover {
-        color:var(--color-secundary);
-    }
-    .emp{
-        color:var(--color-primary);
-    }
