--- a/CSS/_footer.css
+++ b/CSS/_footer.css
@@ -4,7 +4,7 @@
   width: 100%;
   min-height: 30rem;
   display: grid;
-  gap: 4rem;
+  gap: 4rem; /*separação entre elementos*/
   padding: 4rem 2rem;
   text-transform: uppercase;
 }
