--- a/CSS/_header.css
+++ b/CSS/_header.css
@@ -13,7 +13,7 @@ header {
 
 .container__header {
   height: 100%;
-  min-height: 70vh;
+  min-height: 70vh; /*modo pra utilizar porcentagem da tela, nesse caso 70%*/
   display: flex;
   flex-direction: column;
   align-items: end;
