--- a/CSS/contato.css
+++ b/CSS/contato.css
@@ -1,7 +1,7 @@
 .section1 {
   width: 100%;
   height: 100%;
-  min-height: 50vh;
+  min-height: 50vh;/* altura da tela */
   display: flex;
 }
 
@@ -81,7 +81,7 @@
   height: 5rem;
   background: none;
   border: none;
-  outline: none;
+  outline: none; /* quando passa o mouse ou clica é a borda que aparece */
   border-bottom: 1px solid var(--text-primary);
   color: var(--text-primary);
 }
@@ -101,7 +101,7 @@ input:focus, textarea:focus {
   font-size: 2rem;
   font-weight: 700;
   border: none;
-  border-radius: 5rem;
+  border-radius: 5rem; /*borda arredondada*/
   cursor: pointer;
   transition: background-color 0.5s ease;
   height: 5rem;
