--- a/CSS/_footer.css
+++ b/CSS/_footer.css
@@ -4,7 +4,7 @@
   width: 100%;
   min-height: 30rem;
   display: grid;
-  gap: 4rem; /*separação entre elementos*/
+  gap: 4rem;
   padding: 4rem 2rem;
   text-transform: uppercase;
 }
@@ -43,6 +43,9 @@
   background: var(--color-primary);
   border: none;
   padding: 0 0.5rem;
+  color: var(--text-primary);
+  font-size: 1.5rem;
+  font-weight: 900;
 }
 
 .footer__container input::placeholder {
@@ -50,6 +53,11 @@
   font-size: 1.5rem;
   font-weight: 900;
   text-transform: uppercase;
+}
+
+
+.footer__container input:focus {
+  outline: none;
 }
 
 .footer__container button {
