--- a/CSS/_header.css
+++ b/CSS/_header.css
@@ -6,15 +6,14 @@ header {
   position: absolute;
   width: 100%;
   height: 100%;
-  z-index: -1; /*ordem das camadas, dessa forma -1 está descendo pra uma camada atrás*/
-  object-fit: cover; /*cobrir a imagem com o tamanho sem comprimir a imagem*/
+  z-index: -1;
+  object-fit: cover;
   object-position: center;
-  /*TEXT-WRAP - ORGANIZAÇÃO DOS TEXTOS*/
 }
 
 .container__header {
   height: 100%;
-  min-height: 70vh; /*modo pra utilizar porcentagem da tela, nesse caso 70%*/
+  min-height: 70vh;
   display: flex;
   flex-direction: column;
   align-items: end;
