--- a/CSS/_nav.css
+++ b/CSS/_nav.css
@@ -4,10 +4,10 @@
   max-width: 115rem;
   width: 100%;
   padding: 2rem;
-  position: absolute;/* manter centralizado */
+  position: absolute;
   left: 50%;
   transform: translateX(-50%);
-  z-index: 1;
+  z-index: 2;
 }
 
 .nav a {
@@ -30,11 +30,11 @@
   display: block;
   margin-top: -0.5rem;
   color: var(--text-primary);
-  font-size: 0.4em; /*pegando as propriedades da classe pai LOGO no caso definido em 4rem*/
+  font-size: 0.4em;
   font-weight: 500;
 }
 
-.menu {
+.desktop {
   width: 100%;
   max-width: 70rem;
   list-style: none;
@@ -44,7 +44,7 @@
   justify-content: space-evenly;
 }
 
-.menu a {
+.desktop a {
   color: var(--text-primary);
   font-size: 1.5rem;
   font-weight: 500;
@@ -52,63 +52,45 @@
   transition: color 0.5s linear;
 }
 
-.menu a:hover {
+.desktop a:hover, .mobile a:hover {
   color: var(--color-secondary);
 }
 
-.nav .active {
+.mobile {
+  display: grid;
+  place-items: center;
+
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+
+  width: 100vw;
+  height: 100vh;
+  padding: 3rem 2rem;
+
+  background-color: rgba(0, 0, 0, 0.95);
+}
+
+.mobile a {
+  color: var(--text-primary);
+  font-size: 3rem;
+  font-weight: 700;
+}
+
+.nav ul > .active {
   color: var(--color-primary);
 }
 
-#menu-toggle {
-  display: none;
-}
-
-.menu-button-container {
-  display: none;
-  height: 100%;
-  width: 3rem;
+.nav__menu-btn {
   cursor: pointer;
-  position: relative;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.menu-button,
-.menu-button::before,
-.menu-button::after {
-  display: block;
-  background-color: var(--text-primary);
-  position: absolute;
-  height: 0.4rem;
-  width: 3rem;
-  transition: transform 500ms cubic-bezier(0.23, 1, 0.32, 1);
-  border-radius: 0.2rem; /*existem exemplos de menu burguer na internet*/
-}
-
-.menu-button::before {
-  content: "";
-  margin-top: -0.8rem;
-}
-
-.menu-button::after {
-  content: "";
-  margin-top: 0.8rem;
-}
-
-#menu-toggle:checked + .menu-button-container .menu-button::before {
-  margin-top: 0rem;
-  transform: rotate(405deg);
-}
-
-#menu-toggle:checked + .menu-button-container .menu-button {
-  background: rgba(255, 255, 255, 0);
-}
-
-#menu-toggle:checked + .menu-button-container .menu-button::after {
-  margin-top: 0rem;
-  transform: rotate(-405deg);
+  font-size: 4rem;
+  width: fit-content;
+  color: #fff;
+  background: none;
+  border: none;
+  display: none;
+  z-index: 3;
 }
 
 @media screen and (max-width: 800px) {
@@ -116,51 +98,13 @@
     font-size: 3.5rem;
   }
 
-  .menu-button-container {
-    display: flex;
-  }
-
-  .menu {
-    position: absolute;
-    top: 8rem;
-    left: 0;
-    height: 100vh;
-    max-width: 100%;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
-
-  #menu-toggle:checked ~ .menu {
-    display: flex;
-    background-color: var(--bg-footer);
-  }
-
-  #menu-toggle ~ .menu {
+  .desktop {
     display: none;
   }
 
-  #menu-toggle ~ .menu li {
-    height: 0;
-    margin: 0;
-    padding: 0;
-    border: 0;
-    transform: height 400ms cubic-bezier(0.23, 1, 0.32, 1);
+  .nav__menu-btn {
+    display: block;
   }
-
-  #menu-toggle:checked ~ .menu li {
-    padding: 5em 0.5em;
-    transform: height 400ms cubic-bezier(0.23, 1, 0.32, 1);
-  }
-
-  #menu-toggle:checked ~ .menu a {
-    font-size: 2rem;
-    font-weight: 900;
-  }
-
-  /* #menu-toggle:checked ~ .menu li:not(:first-child) {
-    border-top: 3px solid #fff;
-  } */
 }
 
 @media screen and (max-width: 4600px) {
