--- a/CSS/home.css
+++ b/CSS/home.css
@@ -1,140 +1,19 @@
-/* CAROUSEL */
-  @keyframes tonext {
-    75% {
-      left: 0;
-    }
-    95% {
-      left: 100%;
-    }
-    98% {
-      left: 100%;
-    }
-    99% {
-      left: 0;
-    }
-  }
-
-  @keyframes snap {
-    96% {
-      scroll-snap-align: center;
-    }
-    97% {
-      scroll-snap-align: none;
-    }
-    99% {
-      scroll-snap-align: none;
-    }
-    100% {
-      scroll-snap-align: center;
-    }
-  }
-
-  .carousel__viewport::-webkit-scrollbar {
-    width: 0;
-  }
-
-  .carousel__viewport::-webkit-scrollbar-track {
-    background: transparent;
-  }
-
-  .carousel__viewport::-webkit-scrollbar-thumb {
-    background: transparent;
-    border: none;
-  }
-
-  .carousel {
+/* SWIPER */
+  .slider {
     position: relative;
-    padding-top: 60rem;
-    perspective: 10rem;
-    height: 80vh;
-    color: #fff;
-  }
-
-  .carousel__viewport {
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    display: flex;
-    overflow-x: scroll;
-    scroll-behavior: smooth;
-    scroll-snap-type: x mandatory;
-  }
-
-  .carousel__slide {
-    position: relative;
-    flex: 0 0 100%;
     width: 100%;
+    height: 80vh;
   }
 
-  .carousel__slide:before {
-    content: "";
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate3d(-50%,-40%,70px);
-    color: #fff;
-    font-size: 2em;
-  }
-
-  .carousel__snapper {
-    position: absolute;
-    top: 0;
-    left: 0;
+  .swiper {
     width: 100%;
     height: 100%;
-    scroll-snap-align: center;
-  }
-
-  @media (hover: hover) {
-    .carousel__snapper {
-      animation-name: tonext, snap;
-      animation-timing-function: ease;
-      animation-duration: 5s;
-      animation-iteration-count: 2;
-    }
-  }
-
-  .carousel:hover .carousel__snapper,
-  .carousel:focus-within .carousel__snapper {
-    animation-name: none;
-  }
-
-  .carousel::before,
-  .carousel::after,
-  .carousel__prev,
-  .carousel__next {
-    position: absolute;
-    top: 50%;
-    width: 8rem;
-    height: 8rem;
-    transform: translateY(-50%);
-    outline: 0;
-  }
-
-  .carousel::after,
-  .carousel__next {
-    right: 1rem;
-  }
-
-  .carousel::before,
-  .carousel::after {
-    content: '';
-    z-index: 1;
-    background-size: 5rem 5rem;
-    background-repeat: no-repeat;
-    background-position: center center;
     color: #fff;
-    pointer-events: none;
   }
 
-  .carousel::before {
-    background-image: url("../images/icons/left.png");
-  }
-
-  .carousel::after {
-    background-image: url("../images/icons/right.png");
+  .swiper-button-prev,
+  .swiper-button-next {
+    color: #fff;
   }
 /* -------------------------------------------------------------- */
 
